# MatlabTools

./: CMakeLists.txt  ChimeraTK-DeviceAccess  Copyright  Makefile  ReadMe  ReadMe.Ubuntu16  install_debian_package_at_DESY.sh  make_debian_package.sh  matlabTools.files  matlab_root  mtca4u_matlab_version  opts.sh  setMaintainerName.sh
cmake/: version.h.in
cmake/Modules/: FindMatlab.cmake
debian.in/: control.in  copyright.in  create_mex_deps.sh.in  install  rules
example/: dummies.dmap  example.m  generate_print_all_devices_reference.sh  print_all_devices_reference  print_all_devices_reference.in  print_device_info_reference
include/: version.h
matlab/: cd2si.m  cd2ui.m  csi2d.m  cui2d.m  mtca4u.m  mtca4u_interface.m  mtca4u_remote.m  setup.m
src/: mtca4u_mex.cpp
test/: CTestTestfile.cmake  Makefile  dummies.dmap  init_local.m  init_remote.m.in  print_all_devices_reference.in  test_local_init.m  test_mex.m  test_open_close.m  test_read.m  test_remote_init.m  test_remote_init.m.in  test_version.m  test_version.m.in  test_write.m
test/matlab/: check_error.m
test/src/: mlcallmex.cpp  mleval.cpp  mleval.cpp.in
